# MeshGNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: README.md
docs/matrix/: README.md
docs/modules/: api_reference.md  core.md  geometry.md  gnn.md  graph.md  math.md
docs/vector/: README.md
include/gnnmath/: feature_extraction.hpp  graph.hpp  matrix.hpp  mesh.hpp  mesh_processor.hpp  random.hpp  types.hpp  vector.hpp
include/gnnmath/core/: config.hpp  random.hpp  types.hpp
include/gnnmath/geometry/: feature_extraction.hpp  mesh.hpp  mesh_processor.hpp  obj_loader.hpp
include/gnnmath/gnn/: layer.hpp  pipeline.hpp  training.hpp
include/gnnmath/gnn/layers/: edge_conv_layer.hpp  gcn_layer.hpp  layer.hpp
include/gnnmath/gnn/losses/: cross_entropy.hpp  loss.hpp  mse.hpp
include/gnnmath/gnn/optimizers/: adam.hpp  optimizer.hpp  sgd.hpp
include/gnnmath/math/: dense_matrix.hpp  sparse_matrix.hpp  vector.hpp
src/: feature_extraction.cpp  graph.cpp  matrix.cpp  mesh.cpp  mesh_processor.cpp  random.cpp  vector.cpp
src/core/: random.cpp
src/geometry/: feature_extraction.cpp  mesh.cpp  mesh_processor.cpp  obj_loader.cpp
src/gnn/: layer.cpp  pipeline.cpp  training.cpp
src/gnn/layers/: edge_conv_layer.cpp  gcn_layer.cpp
src/gnn/losses/: cross_entropy.cpp  loss.cpp  mse.cpp
src/gnn/optimizers/: adam.cpp  optimizer.cpp  sgd.cpp
src/math/: dense_matrix.cpp  sparse_matrix.cpp  vector.cpp
src/mesh/: feature_extraction.cpp  mesh_processor.cpp
tests/: test_gnn.cpp  test_matrix.cpp  test_mesh.cpp  test_vector.cpp
